--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "server",
   "version": "1.0.0",
@@ -21,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "nanoid": "^2.1.11"
+    "nanoid": "^2.1.11",
+    "nodemon": "^3.1.0"
   }
 }
