--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^2.1.11",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "openai": "^4.53.2"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.11"
   }
 }
