--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^2.1.11",
     "nodemon": "^3.1.0",
-    "openai": "^4.53.2"
+    "openai": "^4.53.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11"
